# birdle

./: Cargo.toml  README.md  birdle.d.ts  birdle.js  birdle_bg.wasm.d.ts  index.html
assets/: words.dict
src/: main.rs
